--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
 
 }
 
+p:last-child {
+	margin-bottom: 0;
+}
+
 a { 
 	color: #fff;
 	text-decoration: none;
@@ -54,15 +58,15 @@ a {
 /* Targets any devices who's screen width is 769px or wider */
     .container{
         width: 70%;
-        margin: 0px auto;
+        margin: 0 auto;
 
         max-width: 1000px;
         /* This ensures the layout does not go stretch to beyond 1000 pixels in larger screens */
         
     }
 
-    .wrap{
-        min-height: calc(100vh - 89px);
-    }
+}
 
+.wrap{
+    min-height: calc(100vh - 89px);
 }
