--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,34 @@
 /* ================================= 
-  Base Element Styles
+  Base Styles
 ==================================== */
+
 * {
-    /* applies to all elements */
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
+	font-family: 'Varela Round', sans-serif;
 	line-height: 1.6;
-    color: #3a3a3a;
-
+	color: #3a3a3a;
 }
 
-p:last-child {
-	margin-bottom: 0;
+p {
+	font-size: .95em;
+	margin-bottom: 1.5em;
 }
 
-a { 
-	color: #fff;
+h2,
+h3,
+a {
+	color: #093a58;
+}
+
+h2,
+h3 {
+	margin-top: 0;
+}
+
+a {
 	text-decoration: none;
 }
 
@@ -28,45 +39,81 @@ a {
 /* ---- Navigation ---- */
 
 .name {
-    margin: 0;
+	font-size: 1.25em;
+}
+
+.name,
+.main-nav li {
+	text-align: center;
+	background: #fff;
+	margin-top: 6px;
+	margin-bottom: 6px;
+}
+
+.main-nav a {
+	font-size: .95em;
+	color: #3acec2;
+	text-transform: uppercase;
+}
+
+.main-nav a:hover {
+	color: #093a58;
+}
+
+.name a,
+.main-nav a {
+    display: block;
+    padding: 10px 15px;
 }
 
 /* ---- Layout Containers ---- */
 
 .container {
-    padding-left: 1em;
-    padding-right: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 .main-header {
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
 	background: #3acec2;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
 .main-footer {
-    text-align: center;
+	text-align: center;
 	padding: 2em 0;
 	background: #d9e4ea;
 }
 
-/* ================================= 
-    Media Queries
-==================================== */
-
-/* Everything outside of the media queries get applied to all devices */
-/* Only those rules within the media query will be device specific */
-@media (min-width: 769px) {
-/* Targets any devices who's screen width is 769px or wider */
-    .container{
-        width: 70%;
-        margin: 0 auto;
-
-        max-width: 1000px;
-        /* This ensures the layout does not go stretch to beyond 1000 pixels in larger screens */
-        
-    }
-
+.wrap {
+    min-height: calc(100vh - 89px);
 }
 
-.wrap{
-    min-height: calc(100vh - 89px);
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media (min-width: 769px) {
+
+	.container {
+		width: 80%;
+		max-width: 1150px;
+		margin: 0 auto;
+    }
+    
+    .name,
+    .main-nav li {
+        display: inline-block;
+    }
+
+    .name {
+        width: 240px;
+    }
+
+    .main-nav li{
+        margin-right: 12px;
+    }
+
 }
